--- a/src/web/package.json
+++ b/src/web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "rollup": "^4.22.5",
     "tw-elements-react": "^1.0.0-alpha-end",
     "use-react-countries": "^2.0.1"
   },
@@ -25,6 +26,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.34",
+    "@types/rollup": "^0.51.4",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
